# anki-converter

./: .gitignore  README.md  pyproject.toml
src/: anki_converter.py  run.py
tests/: TestFile.py  TestFilter.py  test.apkg.csv
